# trt-yolov8-accelerator

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  README.md  requirements.txt  validate_plugins.sh
docker/: Dockerfile  README_Docker.md  TensorRT_Version_Guide.md  docker-dev.sh  entrypoint.sh  verify-tensorrt-versions.sh
plugins/decode_yolo/: decode_yolo_plugin.cu  decode_yolo_plugin.h
plugins/efficient_nms/: efficient_nms_plugin.cu  efficient_nms_plugin.h
scripts/: DATASETS_README.md  coco.yaml  download_yolov8_datasets.py  export_yolov8_onnx.py  validate_datasets.py
src/: onnx_to_trt_yolo.cpp  yolo_int8_calibrator.cpp  yolo_trt_infer.cpp
video_tracking/: CMakeLists.txt  CMakeLists_standalone.txt  README.md  build_tracking.sh  config.txt  demo.sh  main.cpp  run_demo.sh  verify_setup.sh
video_tracking/include/: object_tracker.h  tracking_config.h  video_processor.h  zone_counter.h
video_tracking/src/: main.cpp  object_tracker.cpp  tracking_config.cpp  video_processor.cpp  video_processor_simple.cpp  zone_counter.cpp
video_tracking/test/: advanced_test.cpp  basic_test.cpp
